[metadata]
description = Wrapping FID Net
name = fidnet
long_description = file: README.md
long_description_content_type = markdown
license = MIT License
license_file = LICENSE
url = https://github.com/gogulan-k/FID-Net
platforms=any
authors = Gogulan Karunanithy
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
zip_safe = False
packages = find:
install_requires=
    pydantic
    pydantic-settings
    python-dotenv
    typer[all]
    nmrglue

[options.extras_require]
tests =
    pytest
    pytest-sugar
    pytest-cov
    pytest-mock
    mypy
dev =
    %(tests)s
    pre-commit

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
ignore=
    # Whitespace before ':'
    E203
    # Too many leading '#' for block comment
    E266
    # Line break occurred before a binary operator
    W503
    # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
    P1
    # B008 Do not perform function calls in argument defaults.
    B008
    # import not on top of file (keeping CLI fast)
    E402
max_line_length = 88
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true


[options.entry_points]
console_scripts =
    fidnet = fidnet.__main__:cli
